@@ -1,5 +1,11 @@
 2006-03-09  Danilo Šegan  <danilo@gnome.org>
 
+	* templates/list-languages.tmpl:
+	* teams.py (TranslationTeams.compare_langs): 
+	Added function, sort languages.
+
+2006-03-09  Danilo Šegan  <danilo@gnome.org>
+
 	* teams.py: List languages when desired.
 	* templates/list-languages.tmpl: Added.
 
